Fix text vertical alignment in the image tiles
In languages such as Birmanese and Hindi the characters would go below
the bottom of the tiles, so this patch pushes the text a bit to the top,
avoiding that problem.

https://phabricator.endlessm.com/T16860

--- a/src/gtk-style.css
+++ b/src/gtk-style.css
@@ -486,7 +486,7 @@ flowboxchild {
 }
 
 .image-tile .app-info {
-	background: linear-gradient(to bottom, transparent 50%, rgba(0, 0, 0, 0.6));
+	background: linear-gradient(to bottom, transparent 45%, rgba(0, 0, 0, 0.6));
 	transition-duration: 500ms;
 	border-radius: 8px;
 	border: 0;
